feat: register default routingKey for direct exchange