@@ -1,7 +1,7 @@
 package io.github.ppp16bit.message_broker.binding;
 
 import io.github.ppp16bit.message_broker.queue.BrokerQueue;
-
+import jakarta.annotation.PostConstruct;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
@@ -10,15 +10,22 @@ import java.util.concurrent.ConcurrentHashMap;
 @Component
 public class BindingRegistry {
     private final Map<String, List<BrokerQueue>> bindings = new ConcurrentHashMap<>();
+    private final BrokerQueue brokerQueue;
+
+    public BindingRegistry(BrokerQueue brokerQueue) {
+        this.brokerQueue = brokerQueue;
+    }
+
+    @PostConstruct
+    public void init() {
+        bind("test", brokerQueue);
+    }
 
     public void bind(String routingKey, BrokerQueue queue) {
         bindings.computeIfAbsent(routingKey, k -> new ArrayList<>()).add(queue);
     }
 
     public List<BrokerQueue> getQueues(String routingKey) {
-        if (routingKey == null) {
-            return List.of();
-        }
-        return bindings.getOrDefault(routingKey, List.of());
+        return bindings.getOrDefault(routingKey, Collections.emptyList());
     }
 }
